--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+      "preview": "vite preview",
+      "start": "vite preview --port 3000",
+      "postinstall": "chmod +x node_modules/.bin/vite"
+    },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.0",
