--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -11,6 +11,8 @@
       "start": "vite preview --port 3000",
       "postinstall": "chmod +x node_modules/.bin/vite"
     },
+  "src": "app-frontend/package.json",
+  "use": "@vercel/static-build",
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.0",
